# proyectoFinal

./: CMakeLists.txt  README.md  difusion_paralela.c  difusion_secuencial.c  main.c  secuencial  test  test.c  utilidades.c  utilidades.h
